--- a/variable.css
+++ b/variable.css
@@ -29,3 +29,12 @@ h2 {
 }
 
 
+//可以用变量名定义为变量:
+@fnord: "I am fnord.";
+@var: 'fnord';
+content: @@var;
+
+虽然说这样是可以编译通过的，不过经过测试还是会提示编译警告。
+因此暂且避免使用这个方式
+
+
